Included stored procs and filters on select statement's

--- a/RTTClientManagement/WFRestClient/App.config
+++ b/RTTClientManagement/WFRestClient/App.config
@@ -7,12 +7,16 @@
         <bindings>
             <basicHttpBinding>
                 <binding name="BasicHttpBinding_IClientService" />
+                <binding name="BasicHttpBinding_IIClientSPService" />
             </basicHttpBinding>
         </bindings>
         <client>
             <endpoint address="http://localhost:56365/Service/ClientService.svc"
                 binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IClientService"
                 contract="ClientServiceRef.IClientService" name="BasicHttpBinding_IClientService" />
+            <endpoint address="http://localhost:56365/Service/IClientSPService.svc"
+                binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IIClientSPService"
+                contract="ClientServiceRef1.IIClientSPService" name="BasicHttpBinding_IIClientSPService" />
         </client>
     </system.serviceModel>
 </configuration>
