--- a/RTTClientManagement/WFRestClient/WFRestClient.csproj
+++ b/RTTClientManagement/WFRestClient/WFRestClient.csproj
@@ -53,11 +53,28 @@
     <Compile Include="Client Management\AddClient.Designer.cs">
       <DependentUpon>AddClient.cs</DependentUpon>
     </Compile>
+    <Compile Include="Client Management\CreateClient.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Client Management\CreateClient.Designer.cs">
+      <DependentUpon>CreateClient.cs</DependentUpon>
+    </Compile>
     <Compile Include="Client Management\HomeForm.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Client Management\HomeForm.Designer.cs">
       <DependentUpon>HomeForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Client Management\Index.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Client Management\Index.Designer.cs">
+      <DependentUpon>Index.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Connected Services\ClientServiceRef1\Reference.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Reference.svcmap</DependentUpon>
     </Compile>
     <Compile Include="Connected Services\ClientServiceRef\Reference.cs">
       <AutoGen>True</AutoGen>
@@ -69,8 +86,14 @@
     <EmbeddedResource Include="Client Management\AddClient.resx">
       <DependentUpon>AddClient.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Client Management\CreateClient.resx">
+      <DependentUpon>CreateClient.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Client Management\HomeForm.resx">
       <DependentUpon>HomeForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Client Management\Index.resx">
+      <DependentUpon>Index.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -81,6 +104,22 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <None Include="Connected Services\ClientServiceRef1\IClientSPService.wsdl" />
+    <None Include="Connected Services\ClientServiceRef1\IClientSPService.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Connected Services\ClientServiceRef1\IClientSPService1.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Connected Services\ClientServiceRef1\IClientSPService2.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Connected Services\ClientServiceRef1\IClientSPService3.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Connected Services\ClientServiceRef1\IClientSPService31.xsd">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="Connected Services\ClientServiceRef\ClientService.wsdl" />
     <None Include="Connected Services\ClientServiceRef\ClientService.xsd">
       <SubType>Designer</SubType>
@@ -115,6 +154,7 @@
     <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
   <ItemGroup>
+    <WCFMetadataStorage Include="Connected Services\ClientServiceRef1\" />
     <WCFMetadataStorage Include="Connected Services\ClientServiceRef\" />
   </ItemGroup>
   <ItemGroup>
@@ -128,6 +168,21 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Connected Services\ClientServiceRef\Reference.svcmap">
+      <Generator>WCF Proxy Generator</Generator>
+      <LastGenOutput>Reference.cs</LastGenOutput>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Connected Services\ClientServiceRef1\IClientSPService.disco" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Connected Services\ClientServiceRef1\configuration91.svcinfo" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Connected Services\ClientServiceRef1\configuration.svcinfo" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Connected Services\ClientServiceRef1\Reference.svcmap">
       <Generator>WCF Proxy Generator</Generator>
       <LastGenOutput>Reference.cs</LastGenOutput>
     </None>
