--- a/RTTClientManagement/WcfService/WcfService.csproj
+++ b/RTTClientManagement/WcfService/WcfService.csproj
@@ -62,9 +62,11 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Service\ClientService.svc" />
+    <Content Include="Service\IClientSPService.svc" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DAL\DBConnect.cs" />
     <Compile Include="DAL\DbConnection.cs" />
     <Compile Include="ExceptionMessage.cs" />
     <Compile Include="Models\AddressDetails.cs" />
@@ -75,6 +77,10 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Service\IClientService.cs" />
+    <Compile Include="Service\IClientSPService.svc.cs">
+      <DependentUpon>IClientSPService.svc</DependentUpon>
+    </Compile>
+    <Compile Include="Service\IIClientSPService.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -86,6 +92,9 @@
     <None Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
