--- a/RTTClientManagement/WcfService/Web.config
+++ b/RTTClientManagement/WcfService/Web.config
@@ -6,7 +6,7 @@
   </appSettings>
   
   <connectionStrings>
-    <add name="RTTDbCon" connectionString="Data Source=LUTHULCOMP2\SQLEXPRESS;Initial Catalog=ClientManagerDb;Integrated Security=True"/>
+    <add name="RTTDbCon" connectionString="Data Source=RTTJHB_PMO02;Initial Catalog=ClientManagerDb;Integrated Security=True"/>
   </connectionStrings>
   
   <system.web>
@@ -14,6 +14,8 @@
     <httpRuntime targetFramework="4.6.1"/>
   </system.web>
   <system.serviceModel>
+    <bindings />
+    <client />
     <behaviors>
       <serviceBehaviors>
         <behavior>
