--- a/RTTClientManagement/WFRestClient/WFRestClient.csproj
+++ b/RTTClientManagement/WFRestClient/WFRestClient.csproj
@@ -71,6 +71,12 @@
     <Compile Include="Client Management\Index.Designer.cs">
       <DependentUpon>Index.cs</DependentUpon>
     </Compile>
+    <Compile Include="Client Management\ToolTip.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Client Management\ToolTip.Designer.cs">
+      <DependentUpon>ToolTip.cs</DependentUpon>
+    </Compile>
     <Compile Include="Connected Services\ClientServiceRef1\Reference.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -94,6 +100,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Client Management\Index.resx">
       <DependentUpon>Index.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Client Management\ToolTip.resx">
+      <DependentUpon>ToolTip.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
